# pcloud-relay-server

./: .dockerignore  .env.example  .env.ip.example  Cargo.toml  Dockerfile  README.md  docker-compose.ip.yml  docker-compose.yml
deploy/: Caddyfile
src/: config.rs  device.rs  main.rs  protocol.rs  proxy.rs  routes.rs  state.rs
